--- a/game2.html
+++ b/game2.html
@@ -12,7 +12,11 @@ canvas {
 <body onload="startGame()">
 <script>
 
-var exampleSocket = new WebSocket("ws://pappaochson.se:7682/", "lws-minimal");
+// The libwebsocket server listens at port 7682:
+//var exampleSocket = new WebSocket("ws://pappaochson.se:7682/", "lws-minimal");
+// The webserver is a reverse proxy and redirects port 80:
+var exampleSocket = new WebSocket("ws://pappaochson.se/ws:80/", "lws-minimal");
+
 var sprites = new Array(100);
 var drawList = new Array(100);
 var numInDrawList = 0;
