--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ canvas {
     background-color: #f1f1f1;
 }
 </style>
+<link rel="shortcut icon" href="spaceship.png"/>
 </head>
 <body onload="startGame()">
 <script>
