--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ canvas {
 }
 </style>
 <link rel="shortcut icon" href="spaceship.png"/>
+<title>Spacebattle</title>
 </head>
 <body onload="startGame()">
 <script>
