mobile screen adaptation 2

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ function KeyEvents (event) {
 
 </script>
 
-<p> Use wasd (arrow keys work on some browsers)</p>
+<p>WASD</p>
 <script src="joystick.js"></script>
 </body>
 </html>
