--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ canvas {
 // The libwebsocket server listens at port 7682:
 //var exampleSocket = new WebSocket("ws://pappaochson.se:7682/", "lws-minimal");
 // The webserver is a reverse proxy and redirects port 80:
-var exampleSocket = new WebSocket("ws://pappaochson.se/ws:80/", "lws-minimal");
+var exampleSocket = new WebSocket("wss://pappaochson.se/ws:80/", "lws-minimal");
 
 var sprites = new Array(100);
 var drawList = new Array(100);
